--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<div id="code">
 						<font color="black" size="4"><b><i>
 						<span class="say"> </span><br>
-						<span class="say"><span class="ai" >对的人 </span>，爱你哦！</span><br>
+						<span class="say"><span class="ai" > </span>，爱你哦！</span><br>
 						<span class="say"> </span><br>
 						<span class="say"> You walks in beauty, like the night</span><br>
 						<span class="say"> </span><br>
